--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin: 20px auto;
     color: var(--fontColor);
     letter-spacing: 1px;
+    font-size: 12px;
 }
 .btn {
     padding: 12px;
@@ -66,7 +67,9 @@ body {
 }
 
 @media (max-width: 992px) {
-
+    .name {
+        font-size: 30px;
+    }
 }
 
 @keyframes fadein {
